Add default images and empy files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pag 1</title>
+    <title>Venta de relojes</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci repudiandae vel maxime non praesentium doloribus quam corporis ullam officia provident corrupti, error unde consectetur sunt, accusantium inventore voluptas, mollitia doloremque?
+    <!--
+    Página inicial del sitio, donde indiquen los nombres de los integrantes 
+    del grupo y una breve descripción del sitio, con
+    videos e imágenes de sus productos. (Usando elementos semánticos)
+    -->
+
+    <script src="./app.js" async></script>
 </body>
 </html>
