--- a/checkout.html
+++ b/checkout.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras :: Desarrollo Web</title>
+    <title>Checkout :: Desarrollo Web</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <!--
-    Página donde se muestre el carrito de compras, lista de productos y el país donde realizara la compra (usando
-    geolocalización).
+    Página donde se confirma la compra y se pueden “quitar/modificar” la 
+    cantidad de productos y se ve el precio final
     -->
 
     <script src="./app.js" async></script>
