--- a/checkout.html
+++ b/checkout.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout :: Desarrollo Web</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <!--
+    Página 3
     Página donde se confirma la compra y se pueden “quitar/modificar” la 
     cantidad de productos y se ve el precio final
     -->
+    <header>
+        <nav>
+            <a href="./index.html">Inicio</a>
+            <a href="./cart.html">Carrito</a>
+            <a href="./checkout.html">Checkout</a>
+        </nav>
+    </header>
 
-    <script src="./app.js" async></script>
+    <div class="main-content">
+        
+    </div>
+
+    <script src="./js/app.js" async></script>
 </body>
 </html>
