--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial :: Desarrollo Web</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <!--
@@ -12,7 +12,18 @@
     del grupo y una breve descripción del sitio, con
     videos e imágenes de sus productos. (Usando elementos semánticos)
     -->
+    <header>
+        <nav>
+            <a href="./index.html">Inicio</a>
+            <a href="./cart.html">Carrito</a>
+            <a href="./checkout.html">Checkout</a>
+        </nav>
+    </header>
 
-    <script src="./app.js" async></script>
+    <div class="main-content">
+        
+    </div>
+
+    <script src="./js/app.js" async></script>
 </body>
 </html>
