--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial :: Desarrollo Web</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <!-- Fuente personalizada y librería de íconos -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!--
@@ -14,15 +17,46 @@
     -->
     <header>
         <nav>
-            <a href="./index.html">Inicio</a>
-            <a href="./cart.html">Carrito</a>
-            <a href="./checkout.html">Checkout</a>
+            <ul>
+                <li><a href="./index.html"><i class="fas fa-home"></i> Inicio</a></li>
+                <li><a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
+                <li><a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a></li>
+            </ul>
         </nav>
     </header>
 
-    <div class="main-content">
-        
-    </div>
+    <main>
+        <section aria-labelledby="sobre-nosotros">
+            <h1 id="sobre-nosotros">Sobre Nosotros</h1>
+            <p class="nombres-integrantes">
+                Christofer Enriquez<br>
+                Pablo Gutierrez<br>
+                Daniel Garcia<br>
+                Estuardo Martinez
+            </p>
+        </section>
+
+        <section aria-labelledby="productos">
+            <h2 id="productos">Conoce Nuestros Productos</h2>
+            <article>
+                <h3>Reloj Swatch Gold</h3>
+                <img src="./img/skinglam.jpg" alt="Reloj Swatch Gold">
+                <p class="descripcion-producto">Uno de los mejores relojes del mercado, por su accesibilidad y rendimiento.</p>
+            </article>
+        </section>
+
+        <section aria-labelledby="video-promocional">
+            <h2 id="video-promocional">Video Promocional</h2>
+            <video controls>
+                <source src="ruta-del-video.mp4" type="video/mp4">
+                Tu navegador no soporta la reproducción de videos.
+            </video>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Curso Desarrollo Web Universidad Mariano Galvez</p>
+    </footer>
 
     <script src="./js/app.js" async></script>
 </body>
