feat: checkout functionality

--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout :: Desarrollo Web</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/checkout.css">
 </head>
 <body>
     <!--
@@ -21,9 +22,11 @@
     </header>
 
     <div class="main-content">
-        
+        <div id="checkout-items"></div>
+        <p id="checkout-total"></p>
     </div>
 
     <script src="./js/app.js" async></script>
+    <script src="./js/checkout.js" async></script>
 </body>
 </html>
