--- a/index.html
+++ b/index.html
@@ -5,6 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial :: Desarrollo Web</title>
     <link rel="stylesheet" href="./styles/styles.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        /* Estilo de la barra de navegación */
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: space-around;
+            background-color: #333;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            padding: 15px 20px;
+            display: flex;
+            align-items: center;
+            font-size: 1.2em;
+        }
+
+        nav ul li a:hover {
+            background-color: #575757;
+        }
+
+        nav ul li a i {
+            margin-right: 8px;
+        }
+
+        /* Estilo para los nombres de los integrantes */
+        .nombres-integrantes {
+            font-size: 1.1em;
+            font-weight: 700;
+            color: #2c3e50;
+            line-height: 1.6;
+        }
+
+        /* Estilo para la descripción de los productos */
+        .descripcion-producto {
+            font-size: 0.9em;
+            color: #555;
+        }
+
+        /* Imágenes con tamaño ajustado */
+        img {
+            max-width: 30%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <!--
@@ -14,15 +68,46 @@
     -->
     <header>
         <nav>
-            <a href="./index.html">Inicio</a>
-            <a href="./cart.html">Carrito</a>
-            <a href="./checkout.html">Checkout</a>
+            <ul>
+                <li><a href="./index.html"><i class="fas fa-home"></i> Inicio</a></li>
+                <li><a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
+                <li><a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a></li>
+            </ul>
         </nav>
     </header>
 
-    <div class="main-content">
-        
-    </div>
+    <main>
+        <section aria-labelledby="sobre-nosotros">
+            <h1 id="sobre-nosotros">Sobre Nosotros</h1>
+            <p class="nombres-integrantes">
+                Christofer Enriquez<br>
+                Pablo Gutierrez<br>
+                Daniel Garcia<br>
+                Estuardo Martinez
+            </p>
+        </section>
+
+        <section aria-labelledby="productos">
+            <h2 id="productos">Conoce Nuestros Productos</h2>
+            <article>
+                <h3>Reloj Swatch Gold</h3>
+                <img src="./img/skinglam.jpg" alt="Reloj Swatch Gold">
+                <p class="descripcion-producto">Uno de los mejores relojes del mercado, por su accesibilidad y rendimiento.</p>
+            </article>
+        </section>
+
+        <section aria-labelledby="video-promocional">
+            <h2 id="video-promocional">Video Promocional</h2>
+            <video controls>
+                <source src="ruta-del-video.mp4" type="video/mp4">
+                Tu navegador no soporta la reproducción de videos.
+            </video>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Curso Desarrollo Web Universidad Mariano Galvez</p>
+    </footer>
 
     <script src="./js/app.js" async></script>
 </body>
