styles: update cart styles and menu pages

--- a/checkout.html
+++ b/checkout.html
@@ -17,9 +17,9 @@
     -->
     <header>
         <nav>
-            <a href="./index.html">Inicio</a>
-            <a href="./cart.html">Carrito</a>
-            <a href="./checkout.html">Checkout</a>
+            <a href="./index.html"><i class="fas fa-home"></i> Inicio</a>
+            <a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a>
+            <a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a>
         </nav>
     </header>
 
