--- a/index.html
+++ b/index.html
@@ -68,11 +68,9 @@
     -->
     <header>
         <nav>
-            <ul>
-                <li><a href="./index.html"><i class="fas fa-home"></i> Inicio</a></li>
-                <li><a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
-                <li><a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a></li>
-            </ul>
+            <a href="./index.html"><i class="fas fa-home"></i> Inicio</a>
+            <a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a>
+            <a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a>
         </nav>
     </header>
 
