chore: update footer

--- a/cart.html
+++ b/cart.html
@@ -78,7 +78,9 @@
             </article>
         </section>
     </div>
-
+    <footer>
+        <p>&copy; © 2024 Tienda de Relojes. Todos los derechos reservados.</p>
+    </footer>
     <script src="./config.js"></script>
     <script src="./js/app.js" async></script>
     <script src="./js/cart.js"></script>
