--- a/checkout.html
+++ b/checkout.html
@@ -27,7 +27,9 @@
         <div id="checkout-items"></div>
         <p id="checkout-total"></p>
     </div>
-
+    <footer>
+        <p>&copy; 2024 Curso Desarrollo Web Universidad Mariano Galvez</p>
+    </footer>
     <script src="./js/app.js" async></script>
     <script src="./js/checkout.js" async></script>
 </body>
