--- a/cart.html
+++ b/cart.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras :: Desarrollo Web</title>
+    <title>Página Inicial :: Desarrollo Web</title>
+    <!-- Fuente personalizada y librería de íconos -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/cart.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!--
@@ -79,7 +80,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; © 2024 Tienda de Relojes. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Curso Desarrollo Web Universidad Mariano Galvez</p>
     </footer>
     <script src="./config.js"></script>
     <script src="./js/app.js" async></script>
