--- a/index.html
+++ b/index.html
@@ -4,79 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial :: Desarrollo Web</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-
+    <!-- Fuente personalizada y librería de íconos -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <style>
-        /* Estilo de la barra de navegación */
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: space-around;
-            background-color: #333;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            padding: 15px 20px;
-            display: flex;
-            align-items: center;
-            font-size: 1.2em;
-        }
-
-        nav ul li a:hover {
-            background-color: #575757;
-        }
-
-        nav ul li a i {
-            margin-right: 8px;
-        }
-
-        /* Estilo para los nombres de los integrantes */
-        .nombres-integrantes {
-            font-size: 1.1em;
-            font-weight: 700;
-            color: #2c3e50;
-            line-height: 1.6;
-        }
-
-        /* Estilo para la descripción de los productos */
-        .descripcion-producto {
-            font-size: 0.9em;
-            color: #555;
-        }
-
-        /* Imágenes con tamaño ajustado */
-        img {
-            max-width: 30%;
-            height: auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <!--
-    Página inicial del sitio, donde indiquen los nombres de los integrantes 
-    del grupo y una breve descripción del sitio, con
-    videos e imágenes de sus productos. (Usando elementos semánticos)
-    -->
     <header>
         <nav>
-            <a href="./index.html"><i class="fas fa-home"></i> Inicio</a>
-            <a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a>
-            <a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a>
+            <ul>
+                <li><a href="./index.html"><i class="fas fa-home"></i> Inicio</a></li>
+                <li><a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
+                <li><a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
         <section aria-labelledby="sobre-nosotros">
-            <h1 id="sobre-nosotros">Sobre Nosotros</h1>
+            <h1 id="sobre-nosotros">Explora junto a nosotros el arte del tiempo con nuestros relojes, donde la pasión por la precisión se encuentra con la creatividad.</h1>
             <p class="nombres-integrantes">
                 Christofer Enriquez<br>
                 Pablo Gutierrez<br>
@@ -86,20 +32,20 @@
         </section>
 
         <section aria-labelledby="productos">
-            <h2 id="productos">Conoce Nuestros Productos</h2>
             <article>
-                <h3>Reloj Swatch Gold</h3>
                 <img src="./img/skinglam.jpg" alt="Reloj Swatch Gold">
-                <p class="descripcion-producto">Uno de los mejores relojes del mercado, por su accesibilidad y rendimiento.</p>
             </article>
         </section>
 
         <section aria-labelledby="video-promocional">
-            <h2 id="video-promocional">Video Promocional</h2>
-            <video controls>
-                <source src="ruta-del-video.mp4" type="video/mp4">
-                Tu navegador no soporta la reproducción de videos.
-            </video>
+            <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; max-width:100%; height: 50%;">
+                <iframe src="https://www.youtube.com/embed/Dfz2b5aa-gE?si=XziD3XNtlfSSLLU4" 
+                        style="position:absolute; top:0; left:0; width:100%; height:100%;" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen 
+                        aria-labelledby="video-promocional"></iframe>
+            </div>
         </section>
     </main>
 
