fix: update general page styles

--- a/index.html
+++ b/index.html
@@ -10,23 +10,36 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+    <!--
+    Pagina 1
+    Página inicial del sitio, donde indiquen los nombres de los integrantes 
+    del grupo y una breve descripción del sitio, con videos e imágenes de 
+    sus productos. (Usando elementos semánticos)
+    -->
     <header>
         <nav>
-            <ul>
-                <li><a href="./index.html"><i class="fas fa-home"></i> Inicio</a></li>
-                <li><a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
-                <li><a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a></li>
-            </ul>
+            <a href="./index.html"><i class="fas fa-home"></i> Inicio</a>
+            <a href="./cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a>
+            <a href="./checkout.html"><i class="fas fa-cash-register"></i> Checkout</a>
         </nav>
     </header>
 
     <main>
         <section aria-labelledby="sobre-nosotros">
             <h1 id="sobre-nosotros">Explora junto a nosotros el arte del tiempo con nuestros relojes, donde la pasión por la precisión se encuentra con la creatividad.</h1>
+            <h3>
+                Integrantes del grupo de desarrollo web:
+            </h3>
             <p class="nombres-integrantes">
-                Christofer Enriquez<br>
-                Pablo Gutierrez<br>
-                Daniel Garcia<br>
+                Christofer Enriquez
+            </p>
+            <p class="nombres-integrantes">
+                Pablo Gutierrez
+            </p>
+            <p class="nombres-integrantes">
+                Daniel Garcia
+            </p>
+            <p class="nombres-integrantes">
                 Estuardo Martinez
             </p>
         </section>
@@ -50,7 +63,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Curso Desarrollo Web Universidad Mariano Galvez</p>
+        &copy; 2024 Curso Desarrollo Web Universidad Mariano Galvez
     </footer>
 
     <script src="./js/app.js" async></script>
