--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial :: Desarrollo Web</title>
+    <title>Página 3 - Checkout :: Desarrollo Web</title>
     <!-- Fuente personalizada y librería de íconos -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -29,7 +29,7 @@
         <p id="checkout-total"></p>
     </div>
     <footer>
-        <p>&copy; 2024 Curso Desarrollo Web Universidad Mariano Galvez</p>
+        &copy; 2024 Curso Desarrollo Web Universidad Mariano Galvez
     </footer>
     <script src="./js/app.js" async></script>
     <script src="./js/checkout.js" async></script>
